log/build_2022-11-03_15-23-02/trial_service/stderr.log
  File "/home/jeong/trial_ws/install/trial_service/lib/python3.8/site-packages/trial_service/trial_server.py", line 14
    return response
    ^
SyntaxError: invalid syntax

